--- a/templates/meal_manager.html
+++ b/templates/meal_manager.html
@@ -1,17 +1,12 @@
-<html>
-    <header>
-        <title>
-            Meal Manager
-        </title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/styles.css') }}">
-    </header>
-    <body class="custom-font">
-        <h1>Meal Manager</h1>
-        Logged in as {{ email }}<br><br>
-        <b>Add recipe</b>  
-        <a href="{{ url_for('add_recipe') }}">Manually</a> |   
-        <a href="{{ url_for('upload_json') }}">Upload JSON</a><br><br>
-        <b>Search and Manage</b>
-        <a href="{{ url_for('find_food') }}">Find Food</a>
-    </body>
-</html>
+{% extends "base.html" %}
+{% block title %}Meal Manager{% endblock %}
+
+
+{% block content %}
+    Logged in as {{ email }}<br><br>
+    <b>Add recipe</b>  
+    <a href="{{ url_for('add_recipe') }}">Manually</a> |   
+    <a href="{{ url_for('upload_json') }}">Upload JSON</a><br><br>
+    <b>Search and Manage</b>
+    <a href="{{ url_for('find_food') }}">Find Food</a>
+{% endblock %}
