--- a/templates/login.html
+++ b/templates/login.html
@@ -3,22 +3,35 @@
 
 {% block content %}
 
-{% if message  %}
-    <div class="alert alert-secondary" role="alert">
-        <p>{{ message }}</p>
-    </div>
-{% endif %}
 
-<form action="" method="post">
-    <div class="form-group">
-        <label for="InputEmail">Email address</label>
-        <input name="email" class="form-control" id="InputEmail"  placeholder="Enter email">
-        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+
+<div class="login-bg">
+
+    <div class="login-card">
+        <p class="login-title">Meal Manager</p>
+        <p class="login-title-small">Login</p>
+        {% if message  %}
+        <div class="alert alert-secondary alert-secondary-custom" role="alert">
+            <p class="alert-secondary-custom-text">{{ message }}</p>
+        </div>
+        {% endif %}
+        <div class="login-form">
+            <form action="" method="post">
+                <div class="form-group">
+                    <!-- <label for="InputEmail">User name</label> -->
+                    <input name="email" class="form-control" id="InputEmail"  placeholder="Enter user name">
+                    <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+                </div>
+                <div class="form-group">
+                    <!-- <label for="InputPassword">Password</label> -->
+                    <input type="password" name="password" class="form-control" id="InputPassword" placeholder="Password">
+                </div><br>
+                <button type="submit" class="btn btn-primary">Submit</button><br><br>
+                <a href="{{ url_for('index') }}" class="login-already">New user? Register here</a>
+            </form>
+        </div>
     </div>
-    <div class="form-group">
-        <label for="InputPassword">Password</label>
-        <input type="password" name="password" class="form-control" id="InputPassword" placeholder="Password">
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+    
+</div>
+
 {% endblock %}
