--- a/templates/find_food.html
+++ b/templates/find_food.html
@@ -4,8 +4,47 @@
 {% block content %}
     <h2>Find food</h2>
     <form action="http://127.0.0.1:9000/meal_manager/find_food" method="POST">
-        <label for="available_ingredients">Enter comma separated list of available ingredients</label>
-        <input type="text" id="available_ingredients" name = "available_ingredients"><br>
-        <input type="submit" value="Submit">
+        <!-- <label for="available_ingredients">Enter comma separated list of available ingredients</label>
+        <input type="text" id="available_ingredients" name = "available_ingredients"><br> -->
+        <select class="selectpicker" multiple data-live-search="true">
+            {% for item in all_ingredients %}
+            <option>{{ item.pretty_name }}</option>
+            {% endfor %}
+        </select>
+        <!-- <input type="submit" value="Submit"> -->
+        <button type="submit" class="btn btn-primary">Find</button>
     </form>
+
+    {% if recipe_list %}
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Dish</th>
+                <th scope="col">Mandatory Ingredients</th>
+                <th scope="col">Optional Ingredients</th>
+                <th scope="col">Meal time</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for recipe in recipe_list %}
+            <tr>
+                <td>{{ recipe.pretty_name }}</td>
+                <td>{{ recipe.mandatory_ingredients }}</td>
+                <td>{{ recipe.optional_ingredients }}</td>
+                <td>{{ recipe.meal_time }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    {% endif %}
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
+
+    <!-- (Optional) Latest compiled and minified JavaScript translation files -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/i18n/defaults-*.min.js"></script>
+
 {% endblock %}
