--- a/static/stylesheets/styles.css
+++ b/static/stylesheets/styles.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
 
 
 .custom-font {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'DM Sans', sans-serif;
 }
 
 @keyframes login-bg-fadein {
@@ -82,4 +83,45 @@
 .alert-secondary-custom-text {
     color: white;
     margin: 0px !important;
+}
+
+.find-food-container {
+    float: left;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    width: 100%;
+    flex-wrap: wrap;
+    align-content: space-around;
+}
+
+.find-food-search {
+    position: relative;
+    /* top: 50%; */
+    left: 50%;
+    transform: translate(-50%, 0%);
+    z-index: 999;
+}
+
+.find-food-table {
+    width: 75%;
+    min-width: 400px;
+    justify-content: center;
+    margin-top: 48px;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%, 0%);
+}
+
+.find-food-alert {
+    width: 75%;
+    min-width: 400px;
+    justify-content: center;
+    margin-top: 48px;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    text-align: center;
+    font-weight: bold;
 }
