--- a/templates/find_food.html
+++ b/templates/find_food.html
@@ -3,40 +3,52 @@
 
 {% block content %}
     <h2>Find food</h2>
-    <form action="http://127.0.0.1:9000/meal_manager/find_food" method="POST">
-        <!-- <label for="available_ingredients">Enter comma separated list of available ingredients</label>
-        <input type="text" id="available_ingredients" name = "available_ingredients"><br> -->
-        <select class="selectpicker" multiple data-live-search="true" multiple data-actions-box="true" name = "available_ingredients">
-            {% for item in all_ingredients %}
-            <option value="{{ item.name }}">{{ item.pretty_name }}</option>
-            {% endfor %}
-        </select>
-        <!-- <input type="submit" value="Submit"> -->
-        <button type="submit" class="btn btn-primary">Find</button>
-    </form>
+    <div class="find-food-container">
+        <div class="find-food-search">
+            <form action="http://127.0.0.1:9000/meal_manager/find_food" method="POST">
+                <select class="selectpicker" multiple data-live-search="true" multiple data-actions-box="true" name = "available_ingredients" data-width="400px">
+                    {% for item in all_ingredients %}
+                    <option value="{{ item.name }}">{{ item.pretty_name }}</option>
+                    {% endfor %}
+                </select>
+                <button type="submit" class="btn btn-primary">Find</button>
+            </form>
+        </div>
+        {% if recipe_list %}
+        <table class="table find-food-table">
+            <thead>
+                <tr>
+                    <th scope="col">Dish</th>
+                    <th scope="col">Mandatory Ingredients</th>
+                    <th scope="col">Optional Ingredients</th>
+                    <th scope="col">Meal time</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for recipe in recipe_list %}
+                <tr>
+                    <td>{{ recipe.pretty_name }}</td>
+                    <td>{{ recipe.mandatory_ingredients_pretty }}</td>
+                    <td>{{ recipe.optional_ingredients_pretty }}</td>
+                    <td>{{ recipe.meal_time_pretty }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        {% endif %}
 
-    {% if recipe_list %}
-    <table class="table">
-        <thead>
-            <tr>
-                <th scope="col">Dish</th>
-                <th scope="col">Mandatory Ingredients</th>
-                <th scope="col">Optional Ingredients</th>
-                <th scope="col">Meal time</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for recipe in recipe_list %}
-            <tr>
-                <td>{{ recipe.pretty_name }}</td>
-                <td>{{ recipe.mandatory_ingredients_pretty }}</td>
-                <td>{{ recipe.optional_ingredients_pretty }}</td>
-                <td>{{ recipe.meal_time_pretty }}</td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    {% endif %}
+        {% if no_food_alert %}
+        <div class="find-food-alert">
+            <p>No possible recipes.</p>
+        </div>
+        {% endif %}
+    </div>
+    
+    
+    
+    
+    
+    
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
