--- a/static/stylesheets/styles.css
+++ b/static/stylesheets/styles.css
@@ -121,9 +121,9 @@
     min-width: 400px;
     justify-content: center;
     margin-top: 48px;
-    position: relative;
-    left: 50%;
-    transform: translate(-50%, 0%);
+    /* position: relative; */
+    /* left: 50%; */
+    /* transform: translate(-50%, 0%); */
     text-align: center;
     font-weight: bold;
 }
@@ -132,9 +132,10 @@
     width: 280px;
     height: 200px;
     margin: 12px;
-    background-color: rgb(227, 241, 216);
+    background-color: rgba(247, 236, 146, 0.685);
     border-radius: 8px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+    /* backdrop-filter: blur(10px); */
 }
 
 .find-food-card-title {
@@ -164,3 +165,77 @@
     color: cadetblue;
 }
 
+/* .find-food-background {
+    height: 100%;
+    width: 100%;
+    background-image: url("../images/image1.jpg");
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+} */
+
+/* Add food page */
+.add-food-container-bg {
+    /* background-image: url("../images/image1.jpg");
+    background-size: cover;
+    height: 100%; */
+
+    height: 100%;
+    width: 100%;
+    background-image: url("../images/image1.jpg");
+    margin: 0;
+    position: absolute;
+    /* overflow: hidden; */
+    /* top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); */
+    background-size: cover;
+}
+
+.add-food-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    
+}
+
+.add-food-manually {
+    background: rgba(59, 58, 58, 0.7);
+    border-radius: 8px;
+    /* max-width: 500px; */
+    width: 50%;
+    margin: 12px;
+    padding: 12px;
+    backdrop-filter: blur(10px);
+    color: white;
+}
+
+.add-food-upload {
+    background: rgba(59, 58, 58, 0.7);
+    border-radius: 8px;
+    /* max-width: 500px; */
+    width: 50%;
+    margin: 12px;
+    padding: 40px;
+    backdrop-filter: blur(10px);
+    color: white;
+    
+}
+
+.add-food-upload-center {
+    max-width: 500px;
+    position: relative;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+/* Custom Bootstap */
+.navbar-expand-lg .navbar-collapse {
+    flex-direction: row-reverse;
+}
