--- a/templates/find_food.html
+++ b/templates/find_food.html
@@ -2,6 +2,7 @@
 {% block title %}Meal Manager{% endblock %}
 
 {% block content %}
+<div>
     <h2>Find food</h2>
     <div style="width: 100%;">
         <div class="find-food-search">
@@ -60,13 +61,6 @@
         </div>
         {% endif %}
     </div>
-    
-    
-    
-    
-    
-    
-
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
 
@@ -76,4 +70,6 @@
     <!-- (Optional) Latest compiled and minified JavaScript translation files -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/i18n/defaults-*.min.js"></script>
 
+</div>
+    
 {% endblock %}
