More UI changes - Added background to base.html - Added icon

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -2,7 +2,7 @@
 {% block title %}Meal Manager{% endblock %}
 
 {% block content %}
-<div class="add-food-container-bg">
+<div>
     <div class="add-food-container">
         <div class="add-food-manually">
             <b>Add recipe manually</b>
