--- a/static/stylesheets/styles.css
+++ b/static/stylesheets/styles.css
@@ -132,10 +132,11 @@
     width: 280px;
     height: 200px;
     margin: 12px;
-    background-color: rgba(247, 236, 146, 0.685);
+    /* background-color: rgba(247, 236, 146, 0.685); */
+    background-color: #ffffff85;
     border-radius: 8px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
-    /* backdrop-filter: blur(10px); */
+    backdrop-filter: blur(10px);
 }
 
 .find-food-card-title {
@@ -158,11 +159,12 @@
 }
 
 .find-food-card-mealtime {
+    font-size: small;
     padding-left: 12px;
     padding-right: 12px;
     margin-bottom: 0px;
-    padding-top: 12px;
-    color: cadetblue;
+    /* padding-top: 12px; */
+    color: rgb(0, 0, 0);
 }
 
 /* .find-food-background {
@@ -187,7 +189,7 @@
 
     height: 100%;
     width: 100%;
-    background-image: url("../images/image1.jpg");
+    /* background-image: url("../images/image1.jpg"); */
     margin: 0;
     position: absolute;
     /* overflow: hidden; */
@@ -235,7 +237,14 @@
     top: 50%;
     transform: translate(-50%, -50%);
 }
+
+
 /* Custom Bootstap */
 .navbar-expand-lg .navbar-collapse {
     flex-direction: row-reverse;
+}
+
+.navbar-light {
+    backdrop-filter: blur(10px);
+    background-color: #ffffff75;
 }
