--- a/templates/base.html
+++ b/templates/base.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head><meta charset="utf-8">
     <title>{% block title %}{%endblock %}</title>
-    
+    <link rel="icon" href="{{ url_for('static', filename='images/dish.png') }}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/styles.css') }}">
 </head>
-<body class="custom-font">
-    <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #e3f2fd;">
+<body class="custom-font login-bg">
+    <nav class="navbar navbar-light navbar-expand-lg">
         <a class="navbar-brand" href="#">Meal Manager</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
