--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 </head>
 <body class="custom-font login-bg">
     <nav class="navbar navbar-light navbar-expand-lg">
-        <a class="navbar-brand" href="#">Meal Manager</a>
+        <a class="navbar-brand" href="#">{% block nav_title %}{% endblock %}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
