--- a/templates/find_food.html
+++ b/templates/find_food.html
@@ -1,9 +1,8 @@
 {% extends "base.html" %}
 {% block title %}Meal Manager{% endblock %}
-
+{% block nav_title %}Meal Manager | Find Food {% endblock%}
 {% block content %}
 <div>
-    <h2>Find food</h2>
     <div style="width: 100%;">
         <div class="find-food-search">
             <form action="http://127.0.0.1:9000/meal_manager/find_food" method="POST">
