--- a/templates/meal_manager.html
+++ b/templates/meal_manager.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}Meal Manager{% endblock %}
-
+{% block nav_title %}Meal Manager{% endblock%}
 
 {% block content %}
     Logged in as {{ email }}<br><br>
