UI/UX updates - Updated title of all pages - Rerouted successful login to find_food

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 
 {% extends "base.html" %}
-{% block title %}Register System{% endblock %}
+{% block title %}Meal Manager | Register{% endblock %}
 
 {% block content %}
 
