--- a/templates/find_food.html
+++ b/templates/find_food.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Meal Manager{% endblock %}
+{% block title %}Meal Manager | Find Food{% endblock %}
 {% block nav_title %}Meal Manager | Find Food {% endblock%}
 {% block content %}
 <div>
