--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Meal Manager{% endblock %}
+{% block title %}Meal Manager | Login{% endblock %}
 
 
 {% block content %}
