--- a/static/stylesheets/styles.css
+++ b/static/stylesheets/styles.css
@@ -27,7 +27,7 @@
 .login-bg {
     height: 100%;
     width: 100%;
-    background-image: url("../images/image1.jpg");
+    background-image: url("../images/image3.jpg");
     margin: 0;
     position: absolute;
     top: 50%;
@@ -129,35 +129,40 @@
 
 .find-food-alert {
     width: 75%;
-    min-width: 400px;
+    /* min-width: 400px; */
     justify-content: center;
     margin-top: 48px;
-    /* position: relative; */
-    /* left: 50%; */
-    /* transform: translate(-50%, 0%); */
     text-align: center;
     font-weight: bold;
+    color: white;
+    background-color: rgba(219, 24, 24, 0.541);
+    backdrop-filter: blur(10px);
+    width: 300px;
+    padding: 16px;
+    margin-bottom: 0px;
+    border-radius: 8px;
 }
 
 .find-food-card {
     width: 280px;
-    height: 200px;
+    height: 180px;
     margin: 12px;
-    /* background-color: rgba(247, 236, 146, 0.685); */
     background-color: #ffffffaa;
-    /* background-color: rgba(59, 58, 58, 0.7); */
     border-radius: 8px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
     backdrop-filter: blur(10px);
-    
+    transition: 200ms;
+}
+
+.find-food-card:hover {
+    backdrop-filter: none;
+    background-color: #ffffff;
 }
 
 .find-food-card-title {
     font-size: larger;
     font-weight: bold;
-    /* height: 50px; */
-    padding-left: 12px;
-    padding-top: 12px;
+    padding: 12px 12px 0px 12px;
     margin-bottom: 0px;
     white-space: nowrap;
     overflow: hidden;
@@ -165,10 +170,9 @@
 }
 
 .find-food-card-ingredients {
-    padding-left: 12px;
-    padding-right: 12px;
     margin-bottom: 0px;
-    padding-top: 12px;
+    padding: 12px 12px 0px 12px;
+    font-size: smaller;
 }
 
 .find-food-card-mealtime {
@@ -176,25 +180,15 @@
     padding-left: 12px;
     padding-right: 12px;
     margin-bottom: 0px;
-    /* padding-top: 12px; */
     color: rgb(0, 0, 0);
 }
 
 /* Add food page */
 .add-food-container-bg {
-    /* background-image: url("../images/image1.jpg");
-    background-size: cover;
-    height: 100%; */
-
     height: 100%;
     width: 100%;
-    /* background-image: url("../images/image1.jpg"); */
     margin: 0;
     position: absolute;
-    /* overflow: hidden; */
-    /* top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); */
     background-size: cover;
 }
 
@@ -209,7 +203,6 @@
 .add-food-manually {
     background: rgba(59, 58, 58, 0.7);
     border-radius: 8px;
-    /* max-width: 500px; */
     width: 50%;
     margin: 12px;
     padding: 12px;
@@ -220,7 +213,6 @@
 .add-food-upload {
     background: rgba(59, 58, 58, 0.7);
     border-radius: 8px;
-    /* max-width: 500px; */
     width: 50%;
     margin: 12px;
     padding: 40px;
@@ -245,5 +237,9 @@
 
 .navbar-light {
     backdrop-filter: blur(10px);
-    background-color: #ffffff75;
+    background-color: #ffffffaa;
+}
+
+.navbar-light .navbar-nav .nav-link {
+    color: black;
 }
